commands.txt
1.pip install virtualenv

2.virtualenv venv

3.venv\scripts\activate .. deactivate.bat

4.(venv)pip install django


(venv)django-admin startproject discussion_board .

(venv)py manage.py runserver

(venv)django-admin startapp boards

py manage.py migrate ##create DB tables
py manage.py makemigrations ##make models ...

py manage.py shell
>>>from boards.models import Board
>>>board = Board(name='web programing', description='This board will speak about all web language')
>>>board.save()
>>>board.id
1
>>>board.name
'web programing'

>>>Board.objects.all() ## before __str__ 
<QuerySet [<Board: Board object (1)>]>
>>>exit()

>>> from boards.models import Board ## after __str__ ## secure sqlinj
>>> Board.objects.all()
<QuerySet [<Board: web programing>]>

py manage.py createsuperuser

'''
shell
'''
QuerySet1
>>> from boards.models import Board
>>> board = Board.objects.get(name='Web Application')
>>> board.topics.all()
<QuerySet [<Topic: afsdfsdfsadfsdfsdfsdfsad>, <Topic: web application>, <Topic: django>, <Topic: abdelghani>]>
>>> board.topics.count()
4
>>> from boards.models import Post
>>> Post.objects.all()
<QuerySet [<Post: fsdfsdfsdafsdfsdfds>, <Post: devosp>, <Post: iugighgjhgj>, <Post: 651132132l;hjkbhjh>, <Post: test>, <Post: python freamwork>, <Post: bedredine>, <Post: dfsdfsd>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: dfsdfsd>, <Post: ffff>, <Post: fffgg>]>
>>> Post.objects.count()
16
>>> Post.objects.filter(topic__board = board)
<QuerySet [<Post: fsdfsdfsdafsdfsdfds>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: dfsdfsd>, <Post: ffff>, <Post: devosp>, <Post: python freamwork>, <Post: bedredine>, <Post: dfsdfsd>]>
>>> Post.objects.filter(topic__board = board).count()
12
>>> Post.objects.filter(topic__board = board).order_by('-created_dt')
<QuerySet [<Post: ffff>, <Post: dfsdfsd>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: 223232323212332>, <Post: dfsdfsd>, <Post: bedredine>, <Post: python freamwork>, <Post: devosp>, <Post: fsdfsdfsdafsdfsdfds>]>
>>> Post.objects.filter(topic__board = board).order_by('-created_dt').first()
<Post: ffff>


QuerySet2

(venv) C:\Users\BedrO\Desktop\Django_Project\first_project>py manage.py shell
Python 3.8.3 (tags/v3.8.3:6f8c832, May 13 2020, 22:20:19) [MSC v.1925 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from boards.models import Board
>>> board = Board.objects.get(name='Web Application')
>>> from django.db.models import count
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'count' from 'django.db.models' (C:\Users\BedrO\Desktop\New folder\1proj\venv\lib\site-packages\django\db\models\__init__.py)
>>> from django.db.models import Count
>>> topics =  board.topics.order_by('-created_dt').annotate(comments=Count('posts'))
>>> for topic in topics:
...     print(topic.comments)
...
2
1
1
8
>>> for topic in topics:
... print(topic.comments)
  File "<console>", line 2
    print(topic.comments)
    ^
IndentationError: expected an indented block
>>> for topic in topics:
...     print(topic.comments)
...
2
1
1
8
>>> exit()

###########
Pagination
###########

>>> from boards.models import Board, Topic, Post
>>> from django.contrib.auth.models import User
>>> user = User.objects.first()
>>> board = Board.objects.get(name='Web Application')
>>> for i in range(100):
...     subject = 'topic test #'.format(i)
...     topic = Topic.objects.create(subject=subject, board=board, created_by=user)                
...	Post.objects.create(message="Test Post", topic=topic, created_by=user)

>>> from boards.models import Topic
>>> Topic.objects.count()
308
>>> Topic.objects.filter(board__name='Web Application').count()
304
>>> queryset= Topic.objects.filter(board__name='Web Application').count().order_by('-created_dt')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'int' object has no attribute 'order_by'
>>> queryset=Topic.objects.filter(board__name='Web Application').order_by('-created_dt')
>>> from django.core.paginator import Paginator
>>> paginator = Pginator(queryset,20)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Pginator' is not defined
>>> paginator = Paginator(queryset,20)
>>> paginator.count
304
>>> paginator.num_pages
16
>>> paginator.page_range
range(1, 17)
>>> paginator.page(2)
<Page 2 of 16>
>>> paginator.page(17)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\BedrO\Desktop\New folder\1proj\venv\lib\site-packages\django\core\paginator.py", line 73, in page
    number = self.validate_number(number)
  File "C:\Users\BedrO\Desktop\New folder\1proj\venv\lib\site-packages\django\core\paginator.py", line 55, in validate_number
    raise EmptyPage(_('That page contains no results'))
django.core.paginator.EmptyPage: That page contains no results
>>> page = paginator.page(2)
>>> page.has_next()
True
>>> page.has_previous()
True
>>> page.next_page_number()
3
>>>


